--- a/about.html
+++ b/about.html
@@ -93,27 +93,27 @@
             <h1>Hi!👋 I'm Hassaan Rumi, the founder of Rumidevelops.</h1>
             <h3>
               In early 2023, I ventured into selling my services online but
-              faced challenges with low sales and few clients. I quickly
-              realized "the problem was my website", which wasn't converting
+              faced challenges with <span>low sales and few clients.</span> I quickly
+              realized <span>"the problem was my website"</span>, which wasn't converting
               visitors into buyers.
               <br /><br />
               After diving into numerous books on marketing and sales, I
-              developed the "brand website script" that now brings in more sales
+              developed the <span>"brand website script"</span> that now brings in more sales
               than I could have imagined. This transformation inspired me to
-              help other small businesses overcome similar challenges.
+              <span>help</span> other small businesses overcome similar challenges.
             </h3>
           </div>
           <div id="about-intro--2">
-            <img src="images/profile2.webp" alt="me" />
+            <img src="images/profile2.webp" alt="owner of RumiDevelops" />
           </div>
         </div>
         <div id="about-mission">
           <h1>Discover Your Path to Online Success</h1>
           <h4>
             Ever felt like your business deserves more attention? <br />
-            At Rumidevelops, we simplify growing your business online so you can
-            focus on what you do best. <br /><br />
-            Our mission is to help small Pakistani businesses market their
+            At Rumidevelops, we simplify growing your business online <span>so you can
+            focus on what you do best.</span> <br /><br />
+            Our mission is to help <span>small Pakistani businesses</span> market their
             products and services with clear, compelling messages and effective
             brand websites. <br /><br />
             We start by understanding your business in detail and then create
@@ -124,7 +124,7 @@
         <div id="about-work">
           <h1>To make that mission possible we</h1>
           <h4>
-            offer a unique "words first" approach. <br />
+            offer a unique <span>"words first"</span> approach. <br />
             Unlike other agencies, we start by discussing your business in
             detail and then create the best content for your site. <br />
             This ensures your website not only looks great but also converts
@@ -146,7 +146,7 @@
             presence. <br /><br />
             Your success is our priority, and we’re here to make it happen. 💼✨
             <br />
-            So, what are you waiting for? just click on the button below and get
+            So, what are you waiting for? <span>just click on the button below</span> and get
             a free strategy session with us to better understand your needs and
             whether our services is fit for your business or not.
           </h4>
@@ -157,6 +157,102 @@
               ><button>
                 claim your free 30-minute strategy session now!
               </button></a
+            >
+          </div>
+          <div id="pricingBtn">
+            <a href="pricing.html">
+              <button>see our pricing</button>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="plan-container" class="container">
+        <h2>Our Plan to Boost Your Sales and Help You Dominate the Market</h2>
+        <div id="plan-div" class="grid grid-three--cols">
+          <div class="plan-item">
+            <img src="images/planning.webp" alt="website development planning">
+            <h1>1.</h1>
+            <h2>
+              You get a tailored plan which will leads you to more sales. 🚀
+            </h2>
+            <p>
+              Ready to transform your business? Start with a call where we dive
+              deep into understanding your needs. We’ll ask the right questions
+              to tailor a plan that fits you perfectly.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Tailored Strategy:</strong> Get a customized website plan
+              and quote, no guesswork involved.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Expert Guidance:</strong> We don’t just build websites; we
+              guide you on how to market your business efficiently.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Shine Bright:</strong> Let’s make your brand shine and
+              stand out in the crowded market!
+            </p>
+          </div>
+          <div class="plan-item">
+            <img src="images/buyer-persona.webp" alt="website development buyer persona">
+            <h1>2.</h1>
+            <h2>
+              You get your entire site written which will include proven sales
+              techniques, so you get more sales. 🎯
+            </h2>
+            <p>
+              Words matter. We gather all the crucial details about your
+              business and craft messages that resonate with your ideal
+              customers.
+            </p>
+            <br />
+            <p>
+              ✅<strong>StoryBrand Framework:</strong> Transform your small
+              business into a well-recognized brand.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Resonating Messages:</strong> Our approach ensures your
+              message converts visitors into loyal customers.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Impactful Communication:</strong> The right words can make
+              all the difference, driving sales and building trust.
+            </p>
+          </div>
+          <div class="plan-item">
+            <img src="images/web.webp" alt="website development & design">
+            <h1>3.</h1>
+            <h2>We design & develop it beautifully</h2>
+            <p>
+              ✅<strong>Design You’ll Love:</strong> We create a beautiful design
+              that captures your brand’s essence.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Flawless Development:</strong> We rigorously test
+              everything to ensure your site works perfectly.
+            </p>
+            <br />
+            <p>
+              ✅<strong>SEO Optimization:</strong> Your site is optimized with
+              top-notch SEO to attract and retain customers.
+            </p>
+            <br />
+            <p>
+              ✅<strong>Hosting Done Right:</strong> We host your website,
+              ensuring it’s live, fast, and ready to impress your audience.
+            </p>
+          </div>
+        </div>
+        <div id="cta-div">
+          <div id="contactBtn">
+            <a href="strategy-session.html"
+              ><button>claim your free strategy session now!</button></a
             >
           </div>
           <div id="pricingBtn">
