--- a/index.html
+++ b/index.html
@@ -90,40 +90,47 @@
       <div id="home">
         <div id="home-part--1">
           <h1>
-           <span>Your Business Deserves to Shine</span> — Boost Sales by 200% with a Custom Brand Website in 30 Days! We’ll guide you every step of the way.<h3>
-            Tired of watching your business struggle while the big players
-            dominate? Transform your business with a stunning brand website and
-            supercharged marketing materials 🎯 from RumiDevelops. And, Watch
-            your
-            <span class="internal-problem"
-              >sales skyrocket by up to 200%! 🚀</span
-            >
+          Do you need a <br><span>High Converting Website</span><br> that <span>Drives Sales</span> for your business? 
+          </h1>
+           <h3>
+            Empowering <span>Small</span> businesses throughtout the globe with <span>high-converting</span> websites to fuel their <span>online growth.</span> Trusted by <span>2000+ businesses.</span>
           </h3>
           <h3>
             And the best part? Our
-            <a href="pricing.html">30-day 100% money-back guarantee</a>. If you
-            don't see the results you want, we'll refund every rupee. Invest in
-            your success and watch your business thrive!
+            <a href="pricing.html">30-day 100% money-back guarantee</a>. <br>
+            Click below to claim your free strategy session and start boosting your sales with a high-converting website!
           </h3>
-          <div id="contactBtn">
-            <a href="strategy-session.html"
-              ><button>claim your free strategy session now!</button></a
-            >
-          </div>
+          <div id="cta-div">
+            <img src="images/right-down.webp" alt="pointing towards website development strategy">
+            <div id="contactBtn">
+              <a href="strategy-session.html"
+                ><button>claim your free strategy session now!</button></a
+              >
+            </div>
+          </div>       
         </div>
         <div id="home-part--2">
-          <img
-            height="300px"
-            width="300px"
+          <div id="img-div">
+            <img
             src="images/happy-man.webp"
             alt="a happy business man after getting more sales and growing his company."
-          />
+          /> <img
+          src="images/trendy-looking-positive-young-unshaven-male-employee-dressed-stylish-luxurious-clothes-using-generic-laptop-computer-sofa-modern-office-rejoicing-success-smiling-broadly.webp"
+          alt="a happy business man after getting more sales and growing his company."
+        />
+          </div>
+          <div id="img-div">
+            <img src="images/website-ss.webp" alt="website development in Pakistan">
+          
+            <img src="images/website-responsive.webp" alt="Website development services">
+           
+          </div>
         </div>
       </div>
       <div id="problems" class="container">
         <h1>
-          TIRED OF BEING AN AVERAGE BUSINESS IN PAKISTAN? DISCOVER "HOW TO BOOST
-          YOUR SALES DIGITALLY!" 🐱‍💻
+          TIRED OF BEING AN AVERAGE BUSINESS IN THE WORLD FULL OF COMPETITION? DISCOVER "HOW TO BOOST
+          YOUR SALES DIGITALLY AND KICK YOUR COMPETITIOR OUT OF THE GAME!" 🚀
         </h1>
         <div id="problems-div">
           <div id="problems-part--1">
@@ -173,10 +180,10 @@
             </p>
             <br />
             <p>
-              And... this champion is known as: <span>"Brand Website!"</span>
+              And... this champion is known as: <span>"High Converting Brand Website!"</span>
             </p>
             <p>
-              All you need is a <span>Brand Website</span> that looks great and
+              All you need is a <span>High Converting Brand Website</span> that looks great and
               turns <span>visitors into buyers!</span>
             </p>
             <br />
@@ -223,7 +230,7 @@
               We will also help you create your <span>brand offer</span> that
               only a "dumb person" would refuse! <br /><br />
               Normally, salesman charge tens of thousands of rupees just for
-              this knowledge that i am giving out for free. Because I know how
+              this knowledge that we are giving out for free. Because we know how
               it feels when you get beaten by your competition and struggle to
               get sales. <br />
               <br />
@@ -256,56 +263,36 @@
         </div>
         <div id="sales-growth--2" class="container">
           <h2 class="sales-growth--heading">
-            Ever dreamed of boosting your sales🚀 to new heights? With a clear,
-            compelling brand website that turns visitors into loyal buyers,
-            <span>You are in the right place!</span>
+            Looking to skyrocket your sales? 🚀 Imagine a <span>high-converting website</span> doing all the heavy lifting while you kick back and sip your chai! No more chasing down every DM or answering the same question 50 times. We’re here to make your website do the work, so you can focus on what really matters—like growing your business and maybe a little more chai. 😄
           </h2>
-          <div id="sales-growth--div" class="grid grid-three--cols">
+          <div id="sales-growth--div">
             <div class="sales-growth--item">
+              <img src="images/web-design.webp" alt="free website design">
+              <h3>Free HomePage Design✨</h3>
+              <p>
+               We first design your homepage for free, showcasing our experience. <br><br> If you like the design, then we can further work together. <br><br> <span>No Pressure On You!</span>
+              </p>
+            </div>
+            <div class="sales-growth--item">
+              <img src="images/text.webp" alt="content writing for website">
               <h3>Words First Approach!🔑</h3>
               <p>
-                Unlike most web agencies that dump the hard work of content
-                creation on you,
-              </p>
-              <br />
-              <p>
-                we do things differently! We dive deep into understanding your
-                business, crafting content that not only looks amazing but also
-                converts like <span>crazy</span> . Your website will become a
-                powerful sales machine, turning casual visitors into loyal
-                customers.
+Unlike most agencies, we handle the <span>hard work of content creation</span> for you. <br><br> We dig deep to understand your business and craft content that not only looks amazing but <span>converts like crazy.</span> <br><br> Your website will become a <span>sales machine</span>, turning visitors into loyal customers.
               </p>
             </div>
             <div class="sales-growth--item">
-              <h3>First Impressions Matter✨</h3>
-              <p>
-                Your website is often the first handshake between your business
-                and potential customers. A professional, user-friendly site
-                creates an unforgettable first impression, building trust and
-                credibility from the get-go.
-              </p>
-              <br />
-              <p>
-                We ensure your site captures hearts and wallets, leading to more
-                inquiries, higher conversions, and soaring sales.
-              </p>
-            </div>
-            <div class="sales-growth--item">
+              <img src="images/reputation.webp" alt="high converting brand website">
               <h3>Outstand everyone! 🌟</h3>
               <p>
-                If you're in Pakistan, you know many small businesses don’t have
-                websites.
+                <span>In Pakistan,</span> many businesses lack a professional website.
               </p>
               <br />
               <p>
-                Imagine the edge you'll have with a professional site—customers
-                will trust and choose you over others.
+                Imagine the <span>trust and edge</span> you'll have over competitors with a website that converts visitors into customers.
               </p>
               <br />
               <p>
-                We work hard to create a brand website that
-                <span>converts</span> visitors into customers and makes your
-                business a <span>trusted name!</span>
+                Let us help in making your business a <span>trusted name online.</span>
               </p>
             </div>
           </div>
@@ -328,6 +315,7 @@
         <h2>Our Plan to Boost Your Sales and Help You Dominate the Market</h2>
         <div id="plan-div" class="grid grid-three--cols">
           <div class="plan-item">
+            <img src="images/planning.webp" alt="website development planning">
             <h1>1.</h1>
             <h2>
               You get a tailored plan which will leads you to more sales. 🚀
@@ -339,22 +327,22 @@
             </p>
             <br />
             <p>
-              <strong>Tailored Strategy:</strong> Get a customized website plan
+              ✅<strong>Tailored Strategy:</strong> Get a customized website plan
               and quote, no guesswork involved.
             </p>
             <br />
             <p>
-              <strong>Expert Guidance:</strong> We don’t just build websites; we
+              ✅<strong>Expert Guidance:</strong> We don’t just build websites; we
               guide you on how to market your business efficiently.
             </p>
             <br />
             <p>
-              <strong>Shine Bright:</strong> Let’s make your brand shine and
+              ✅<strong>Shine Bright:</strong> Let’s make your brand shine and
               stand out in the crowded market!
             </p>
-            <i class="fa-phone fa-solid"></i>
           </div>
           <div class="plan-item">
+            <img src="images/buyer-persona.webp" alt="website development buyer persona">
             <h1>2.</h1>
             <h2>
               You get your entire site written which will include proven sales
@@ -367,44 +355,43 @@
             </p>
             <br />
             <p>
-              <strong>StoryBrand Framework:</strong> Transform your small
+              ✅<strong>StoryBrand Framework:</strong> Transform your small
               business into a well-recognized brand.
             </p>
             <br />
             <p>
-              <strong>Resonating Messages:</strong> Our approach ensures your
+              ✅<strong>Resonating Messages:</strong> Our approach ensures your
               message converts visitors into loyal customers.
             </p>
             <br />
             <p>
-              <strong>Impactful Communication:</strong> The right words can make
+              ✅<strong>Impactful Communication:</strong> The right words can make
               all the difference, driving sales and building trust.
             </p>
-            <i class="fa-bullseye fa-solid"></i>
           </div>
           <div class="plan-item">
+            <img src="images/web.webp" alt="website development & design">
             <h1>3.</h1>
             <h2>We design & develop it beautifully</h2>
             <p>
-              <strong>Design You’ll Love:</strong> We create a beautiful design
+              ✅<strong>Design You’ll Love:</strong> We create a beautiful design
               that captures your brand’s essence.
             </p>
             <br />
             <p>
-              <strong>Flawless Development:</strong> We rigorously test
+              ✅<strong>Flawless Development:</strong> We rigorously test
               everything to ensure your site works perfectly.
             </p>
             <br />
             <p>
-              <strong>SEO Optimization:</strong> Your site is optimized with
+              ✅<strong>SEO Optimization:</strong> Your site is optimized with
               top-notch SEO to attract and retain customers.
             </p>
             <br />
             <p>
-              <strong>Hosting Done Right:</strong> We host your website,
+              ✅<strong>Hosting Done Right:</strong> We host your website,
               ensuring it’s live, fast, and ready to impress your audience.
             </p>
-            <i class="fa-code fa-solid"></i>
           </div>
         </div>
         <div id="cta-div">
@@ -421,20 +408,13 @@
         </div>
       </div>
       <div id="about-us" class="container">
-        <div id="about-us--1" class="container">
-          <img
-            src="images/profile1.webp"
-            alt="RumiDevelops"
-            data-scroll
-            data-scroll-speed="3"
-          />
-        </div>
         <div id="about-us--2" class="container">
+          <h3><span>Now, you might be thinking...</span></h3>
           <h1 class="section-common--heading">
-            About RumiDevelops
+            WHO TF IS THIS GUY?!😅
           </h1>
           <h3>
-            Hi!👋 I'm <span>Hassaan Rumi</span>, The founder of rumidevelops.
+            Hi!👋 I'm <span>Hassaan Rumi</span>, The founder of RumiDevelops.
           </h3>
 
           <h3>
@@ -452,10 +432,10 @@
           <h3>
             I feel that growing a business online should not be difficult and
             every small business should have the opportunities to grow. That's
-            why at rumidevelops, we help you market your products/services in a
-            clear message and build your brand website. So that you don't feel
-            frustrated about getting sales anymore and focus on building your
-            product/service and spend more time with your family🏖️.
+            why at RumiDevelops, we help you <span>market your products/services in a
+            clear message and build your brand website.</span> So that you <span>don't feel
+            frustrated</span> about getting sales anymore and focus on building your
+            product/service and <span>spend more time with your family</span>🏖️.
           </h3>
           <h2>
             Join us in our mission to help small Pakistani businesses like
@@ -466,11 +446,19 @@
               <a href="about.html"><button>Discover more...</button></a>
             </div>
             <div id="contactBtn">
-              <a href="https://www.instagram.com/rumidevelops.pk/"
+              <a target="_blank" href="https://www.instagram.com/rumidevelops.pk/"
                 ><button>Follow me</button></a
               >
             </div>
           </div>
+        </div>
+        <div id="about-us--1" class="container">
+          <img
+            src="images/profile1.WEBP"
+            alt="RumiDevelops"
+            data-scroll
+            data-scroll-speed="3"
+          />
         </div>
       </div>
       <div id="faq" class="container">
