--- a/pricing.html
+++ b/pricing.html
@@ -90,7 +90,7 @@
     </div>
 
     <div id="main">
-      <div id="pricing" class="container">
+      <div id="pricing">
         <div id="pricing-header" class="container">
           <h1>
             <span
@@ -310,33 +310,34 @@
           <h2>Our Plan to Boost Your Sales and Help You Dominate the Market</h2>
           <div id="plan-div" class="grid grid-three--cols">
             <div class="plan-item">
+              <img src="images/planning.webp" alt="website development planning">
               <h1>1.</h1>
               <h2>
                 You get a tailored plan which will leads you to more sales. 🚀
               </h2>
               <p>
-                Ready to transform your business? Start with a call where we
-                dive deep into understanding your needs. We’ll ask the right
-                questions to tailor a plan that fits you perfectly.
+                Ready to transform your business? Start with a call where we dive
+                deep into understanding your needs. We’ll ask the right questions
+                to tailor a plan that fits you perfectly.
               </p>
               <br />
               <p>
-                <strong>Tailored Strategy:</strong> Get a customized website
-                plan and quote, no guesswork involved.
+                ✅<strong>Tailored Strategy:</strong> Get a customized website plan
+                and quote, no guesswork involved.
               </p>
               <br />
               <p>
-                <strong>Expert Guidance:</strong> We don’t just build websites;
-                we guide you on how to market your business efficiently.
+                ✅<strong>Expert Guidance:</strong> We don’t just build websites; we
+                guide you on how to market your business efficiently.
               </p>
               <br />
               <p>
-                <strong>Shine Bright:</strong> Let’s make your brand shine and
+                ✅<strong>Shine Bright:</strong> Let’s make your brand shine and
                 stand out in the crowded market!
               </p>
-              <i class="fa-phone fa-solid"></i>
             </div>
             <div class="plan-item">
+              <img src="images/buyer-persona.webp" alt="website development buyer persona">
               <h1>2.</h1>
               <h2>
                 You get your entire site written which will include proven sales
@@ -349,44 +350,43 @@
               </p>
               <br />
               <p>
-                <strong>StoryBrand Framework:</strong> Transform your small
+                ✅<strong>StoryBrand Framework:</strong> Transform your small
                 business into a well-recognized brand.
               </p>
               <br />
               <p>
-                <strong>Resonating Messages:</strong> Our approach ensures your
+                ✅<strong>Resonating Messages:</strong> Our approach ensures your
                 message converts visitors into loyal customers.
               </p>
               <br />
               <p>
-                <strong>Impactful Communication:</strong> The right words can
-                make all the difference, driving sales and building trust.
+                ✅<strong>Impactful Communication:</strong> The right words can make
+                all the difference, driving sales and building trust.
               </p>
-              <i class="fa-bullseye fa-solid"></i>
             </div>
             <div class="plan-item">
+              <img src="images/web.webp" alt="website development & design">
               <h1>3.</h1>
               <h2>We design & develop it beautifully</h2>
               <p>
-                <strong>Design You’ll Love:</strong> We create a beautiful
-                design that captures your brand’s essence.
+                ✅<strong>Design You’ll Love:</strong> We create a beautiful design
+                that captures your brand’s essence.
               </p>
               <br />
               <p>
-                <strong>Flawless Development:</strong> We rigorously test
+                ✅<strong>Flawless Development:</strong> We rigorously test
                 everything to ensure your site works perfectly.
               </p>
               <br />
               <p>
-                <strong>SEO Optimization:</strong> Your site is optimized with
+                ✅<strong>SEO Optimization:</strong> Your site is optimized with
                 top-notch SEO to attract and retain customers.
               </p>
               <br />
               <p>
-                <strong>Hosting Done Right:</strong> We host your website,
+                ✅<strong>Hosting Done Right:</strong> We host your website,
                 ensuring it’s live, fast, and ready to impress your audience.
               </p>
-              <i class="fa-code fa-solid"></i>
             </div>
           </div>
           <div id="cta-div">
