--- a/works.html
+++ b/works.html
@@ -90,6 +90,30 @@
       <div class="projects">
         <div class="project-item">
           <div class="project-item--1">
+            <h2>Apex Store <span>(Website Design, Website Development, Website Copy, SEO)</span></h2>
+            <p>
+              Apex Store is a car accessories business in Pakistan. I made their content, designed their site, and also developed and made their site live and indexed on google.
+            </p>
+            <div id="pricingBtn">
+              <a
+                target="_blank"
+                href="https://apexstore.netlify.app/"
+              >
+                <button>Visit site</button>
+              </a>
+            </div>
+          </div>
+          <div class="project-item--2">
+            <img
+              src="images/apex store logo.webp"
+              width="300px"
+              height="300px"
+              alt="apex store"
+            />
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-item--1">
             <h2>
               Art of War: Legions
               <span>(Website design, development & SEO)</span>
@@ -146,35 +170,10 @@
           </div>
           <div class="project-item--2">
             <img
-              src="images/Teamss.jpg"
+              src="images/Teamss.webp"
               width="300px"
               height="300px"
               alt="AOW-LOGO"
-            />
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-item--1">
-            <h2>RumiTravels</h2>
-            <p>
-              This website is a travel agency website a project of mine
-              showcasing my skills and experience in the field.
-            </p>
-            <div id="pricingBtn">
-              <a
-                target="_blank"
-                href="https://gitwithrumi.github.io/rumitravels/"
-              >
-                <button>Visit site</button>
-              </a>
-            </div>
-          </div>
-          <div class="project-item--2">
-            <img
-              src="images/rumitravelslogo.webp"
-              width="300px"
-              height="300px"
-              alt="rumitravels"
             />
           </div>
         </div>
@@ -202,31 +201,6 @@
               width="300px"
               height="300px"
               alt="hr coders"
-            />
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-item--1">
-            <h2>NewsMonkey</h2>
-            <p>
-              newsMonkey is a webapp which is using newsapi to fetch news and
-              display it.
-            </p>
-            <div id="pricingBtn">
-              <a
-                target="_blank"
-                href="https://github.com/gitwithrumi/newsMonkey"
-              >
-                <button>Visit site</button>
-              </a>
-            </div>
-          </div>
-          <div class="project-item--2">
-            <img
-              src="images/newsmonkeylogo.webp"
-              width="300px"
-              height="300px"
-              alt="newsMonkey"
             />
           </div>
         </div>
