--- a/works.html
+++ b/works.html
@@ -97,7 +97,7 @@
             <div id="pricingBtn">
               <a
                 target="_blank"
-                href="https://apexstore.netlify.app/"
+                href="https://theapexstore.online/"
               >
                 <button>Visit site</button>
               </a>
