e-commerce pricing added

--- a/about.html
+++ b/about.html
@@ -289,7 +289,7 @@
             <i class="fa-brands fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/rumidevelops.pk/"
+            href="https://www.instagram.com/rumidevelops/"
             target="_blank"
             class="icon"
           >
@@ -301,7 +301,7 @@
         </p>
 
         <!-- Copyright Notice -->
-        <p class="copyright">&copy; 2024 rumidevelops. All rights reserved.</p>
+        <p class="copyright">&copy; 2024 RumiDevelops. All rights reserved.</p>
       </footer>
     </div>
 
