--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
             <i class="fa-brands fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/rumidevelops.pk/"
+            href="https://www.instagram.com/rumidevelops/"
             target="_blank"
             class="icon"
           >
@@ -607,7 +607,7 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
         </p>
 
         <!-- Copyright Notice -->
-        <p class="copyright">&copy; 2024 rumidevelops. All rights reserved.</p>
+        <p class="copyright">&copy; 2024 RumiDevelops. All rights reserved.</p>
       </footer>
     </div>
 
