--- a/strategy-session.html
+++ b/strategy-session.html
@@ -71,7 +71,7 @@
             <i class="fa-brands fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/rumidevelops.pk/"
+            href="https://www.instagram.com/rumidevelops/"
             target="_blank"
             class="icon"
           >
@@ -83,7 +83,7 @@
         </p>
 
         <!-- Copyright Notice -->
-        <p class="copyright">&copy; 2024 rumidevelops. All rights reserved.</p>
+        <p class="copyright">&copy; 2024 RumiDevelops. All rights reserved.</p>
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
