--- a/works.html
+++ b/works.html
@@ -232,7 +232,7 @@
             <i class="fa-brands fa-facebook"></i>
           </a>
           <a
-            href="https://www.instagram.com/rumidevelops.pk/"
+            href="https://www.instagram.com/rumidevelops/"
             target="_blank"
             class="icon"
           >
@@ -244,7 +244,7 @@
         </p>
 
         <!-- Copyright Notice -->
-        <p class="copyright">&copy; 2024 rumidevelops. All rights reserved.</p>
+        <p class="copyright">&copy; 2024 RumiDevelops. All rights reserved.</p>
       </footer>
     </div>
 
