e-commerce project added

--- a/works.html
+++ b/works.html
@@ -90,6 +90,30 @@
       <div class="projects">
         <div class="project-item">
           <div class="project-item--1">
+            <h2>Apax Wears<span>(E-Commerce web Design, WordPress woocommerce Development, Website Copy, SEO)</span></h2>
+            <p>
+              Apax Wears is a men's ONLINE CLOTHING brand, based in Pakistan. Before having an ecommerce website, my client faced many problems in communicating to his clients and confirming an order manually everytime. I suggested him to have his own e-commerce online store so that he doesn't waste his time on confirmaing a whole lot of orders manually by communicating to his client's directly. I made their content, designed their site, and also developed and made their E-commerce wordpress woocommerce site live and indexed on google.
+            </p>
+            <div id="pricingBtn">
+              <a
+                target="_blank"
+                href="https://apaxwears.com"
+              >
+                <button>Visit site</button>
+              </a>
+            </div>
+          </div>
+          <div class="project-item--2">
+            <img
+              src="images/APAX WEARS LOGO.png"
+              width="300px"
+              height="300px"
+              alt="apax wears"
+            />
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-item--1">
             <h2>Apex Store <span>(Website Design, Website Development, Website Copy, SEO)</span></h2>
             <p>
               Apex Store is a car accessories business in Pakistan. I made their content, designed their site, and also developed and made their site live and indexed on google.
@@ -174,33 +198,6 @@
               width="300px"
               height="300px"
               alt="AOW-LOGO"
-            />
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-item--1">
-            <h2>HR Coders</h2>
-            <p>
-              This website is a project of mine showcasing my talent and
-              hardwork in the field. <br />
-              It is an animated+responsive multipage website with a contact page
-              using realtime api to send messages to my email.
-            </p>
-            <div id="pricingBtn">
-              <a
-                target="_blank"
-                href="https://gitwithrumi.github.io/HR-CODERS/"
-              >
-                <button>Visit site</button>
-              </a>
-            </div>
-          </div>
-          <div class="project-item--2">
-            <img
-              src="images/hr-coderslogo.webp"
-              width="300px"
-              height="300px"
-              alt="hr coders"
             />
           </div>
         </div>
