e-commerce project added

--- a/works.html
+++ b/works.html
@@ -92,7 +92,7 @@
           <div class="project-item--1">
             <h2>Apax Wears<span>(E-Commerce web Design, WordPress woocommerce Development, Website Copy, SEO)</span></h2>
             <p>
-              Apax Wears is a men's ONLINE CLOTHING brand, based in Pakistan. Before having an ecommerce website, my client faced many problems in communicating to his clients and confirming an order manually everytime. I suggested him to have his own e-commerce online store so that he doesn't waste his time on confirmaing a whole lot of orders manually by communicating to his client's directly. I made their content, designed their site, and also developed and made their E-commerce wordpress woocommerce site live and indexed on google.
+              Apax Wears is a men's ONLINE CLOTHING brand, based in Pakistan. Before having an ecommerce website, my client faced many problems in communicating to his clients and confirming an order manually everytime. I suggested him to have his own e-commerce online store so that he doesn't waste his time on confirming a whole lot of orders manually (communicating to his client's directly). I made their content, designed their site, and also developed and made their E-commerce wordpress woocommerce site live and indexed on google.
             </p>
             <div id="pricingBtn">
               <a
