e-commerce project added

--- a/strategy-session.html
+++ b/strategy-session.html
@@ -77,8 +77,8 @@
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/gitwithrumi" target="_blank" class="icon">
-            <i class="fa-brands fa-github"></i>
+          <a href="https://www.youtube.com/@RumiDevelops" target="_blank" class="icon">
+            <i class="fa-brands fa-youtube"></i>
           </a>
         </p>
 
