--- a/index.html
+++ b/index.html
@@ -601,8 +601,8 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/gitwithrumi" target="_blank" class="icon">
-            <i class="fa-brands fa-github"></i>
+          <a href="https://www.youtube.com/@RumiDevelops" target="_blank" class="icon">
+            <i class="fa-brands fa-youtube"></i>
           </a>
         </p>
 
