--- a/works.html
+++ b/works.html
@@ -235,8 +235,8 @@
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/gitwithrumi" target="_blank" class="icon">
-            <i class="fa-brands fa-github"></i>
+          <a href="https://www.youtube.com/@RumiDevelops" target="_blank" class="icon">
+            <i class="fa-brands fa-youtube"></i>
           </a>
         </p>
 
