--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           Do you need a <br><span>High Converting Website</span><br> that <span>Drives Sales</span> for your business? 
           </h1>
            <h3>
-            Empowering <span>Small</span> businesses throughtout the globe with <span>high-converting</span> websites to fuel their <span>online growth.</span> Trusted by <span>2000+ businesses.</span>
+            Empowering small <span>Pakistani</span> businesses with <span>AI-Powered</span> <b style="font-weight: ;">high-converting</b> websites to fuel their online growth. 
           </h3>
           <h3>
             And the best part? Our
@@ -410,7 +410,7 @@ Unlike most agencies, we handle the <span>hard work of content creation</span> f
         <div id="about-us--2" class="container">
           <h3><span>Now, you might be thinking...</span></h3>
           <h1 class="section-common--heading">
-            WHO TF IS THIS GUY?!😅
+            WHO IS THIS GUY?!😅
           </h1>
           <h3>
             Hi!👋 I'm <span>Hassaan Rumi</span>, The founder of RumiDevelops.
